--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,41 +1,83 @@
-
 .content{
-	margin: 0 auto;
 	width: 1240px;
+	margin: 0 auto;
 }
+/* 页面头部样式 */
 #nav_wrapper{
+	width: 100%;
 	height: 82px;
 	margin: 0 auto;
-	position: relative;
-	z-index: 9;
+	position: absolute;
+	top:0;
+	z-index: 99;
 }
 .nav{
 	height: 82px;
+	width: 100%;
 	display: flex;
 	flex-direction:row;
 	justify-content: space-between;
 	align-items: center;
 	position: absolute;
-	left:10px;
+	left:0px;
 	top: 0;
+	z-index: 99;
 }
-.nav .right{
-	width: 920px;
+.nav h2{
+	margin-left: 10px;
+}
+.nav h2 .logo1{
+	position: absolute;
+	left: 10px;
+	top: 28px;
+	z-index: 9;
+	display: none;
+}
+.nav .ul_bg{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height:0px;
+	background: #fff;
+	transition: all cubic-bezier(0, 0, 0, 0.99) 0.3s;
+}
+.nav .ul_bg .right{
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 100%;
 	height: 82px;
+	flex: right;
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
 }
 .nav .right .nav_list{
 	width: 652px;
+	height: 82px;
 	margin-right: 15px;
 	display: flex;
+	align-items: center;
 	justify-content: space-around;
 }
-.nav .right .nav_list li a{
+.nav .right .nav_list li{
+	display: inline-block;
+	width: 100%;
+	/* height: 100%;  */
 	color: #fff;
 }
-.nav .right .search{
+.nav .right .nav_list li a{
+	display: inline-block;
+	width: 100%;
+	line-height: 82px;
+	text-align: center;
+	color: #fff;
+}
+.nav .right .nav_list li:hover a{
+	color: #00b9f2;
+}
+.nav .search{
 	width: 160px;
 	height: 30px;
 	border-radius: 20px;
@@ -43,29 +85,29 @@
 	padding-left: 15px;
 	position: relative;
 }
-.nav .right .fdj img{
+.nav .fdj img{
 	width: 15px;
 	height:15px;
 	position: absolute;
-	right: 85px;
+	right: 100px;
 	top: 33px;
 }
-.nav .right .icon-wd{
+.nav .icon-wd{
 	display: block;
 	line-height: 82px;
 	color: #fff;
 	font-size: 24px;
 	margin: 0 15px 0 15px;
 }
-.nav .right .user_center:hover .user{
+.nav .user_center:hover .user{
 	display: block;
 	color:lightskyblue;
 }
-.nav .right .user_center .user li a:hover{
+.nav .user_center .user li a:hover{
 	color:lightskyblue;
 	font-size: 12px;
 }
-.nav .right .user{
+.nav .user{
 	position: absolute;
 	top: 65px;
 	right: 7px;
@@ -75,18 +117,19 @@
 	text-align: center;
 	display: none;
 }
-.nav .right .user li a{
+.nav .user li a{
 	display: block;
 	width: 90px;
 	color: #000;
 	font-size: 12px;
 	line-height: 27px;
 }
-.nav .right .icon-gwc{
+.nav .icon-gwc{
 	color: #fff;
 	font-size: 24px;
+	margin-right: 15px;
 }
-.nav .right .icon-gwc .num{
+.nav .icon-gwc .num{
 	display: block;
 	width: 15px;
 	height: 15px;
@@ -96,17 +139,109 @@
 	font-size: 8px;
 	text-align: center;
 	top: 24px;
-	right: -5px;
+	right: 10px;
+	
 }
-#banner_wrapper{
-	height: 100%;
-	width: 100%;
+.nav .ul_bg .nav_list{
+	width: 721px;
+	height:82px;
+	display: flex;
+	justify-content: space-around;
+	
+}
+.nav .ul_bg .nav_list .hover_list{
 	position: absolute;
-	top: 0;
+	top:0;
 	left: 0;
+	margin-top: 115px;
+	width: 100%;
+	height:0px;
+	display: flex;
+	justify-content: space-around;
+	
+}
+.nav .ul_bg .nav_list .hover_list>li{
+	display: none;
+	height:120px;
+	width: 12.5%;
+}
+.nav .ul_bg .nav_list .phone>.hover_list>li a{
+	height:120px;
+	width: 100%;
+	color: #000;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	z-index: 10;
+}
+.nav .ul_bg .nav_list .voice>.hover_list>li a{
+	height:120px;
+	width:100%;
+	color: #000;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	z-index: 10;
+}
+.nav .ul_bg .nav_list .peijian>.hover_list>li a{
+	height:120px;
+	width:100%;
+	color: #000;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	z-index: 10;
+}
+.nav .ul_bg .nav_list .live>.hover_list>li a{
+	height:120px;
+	width:100%;
+	color: #000;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	z-index: 10;
+}
+.nav .ul_bg .nav_list .APPstor>.hover_list{
+	overflow: hidden;
+	height: 0;
+	width: 100%;
+	transition: all cubic-bezier(0, 0, 0, 0.99) 0.3s;
+}
+.nav .ul_bg .nav_list .APPstor>.hover_list>li a{
+	height:120px;
+	width:100%;
+	color: #000;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+}
+.nav .ul_bg .nav_list .APPstor>.hover_list>li a img{
+	width: 1240px;
+	height:300px;
+}
+.nav .ul_bg .nav_list .hover_list>li>a img{
+	width: 80px;
+	margin-bottom: 5px;
+}
+.nav .ul_bg .nav_list .hover_list>li>a i{
+	line-height: 22px;
+	font-size: 13px;
+	text-align: center;
+	color: #000;
+	padding-bottom: 30px;
+}
+/* banner样式 */
+#banner_wrapper{
+	height:670px;
+	width: 100%;
 }
 .banners{
-	height:100%;
+	height:670px;
 	width: 100%;
 	overflow: hidden;
 	position: relative;
@@ -121,17 +256,15 @@
 .banners .lunbo li{
 	float: left;
 	height: 100%;
-	width: 1366px;
+	width: 1263px;
 	overflow: hidden;
 	position: relative;
-	
 }
 .banners .lunbo li img{
 	height:670px;
 	position: absolute;
 	left: -560px;
 }
-
 .banners .banner_btn{
 	width: 150px;
 	position: absolute;
@@ -156,4 +289,257 @@
 	height: 9px;
 	border: solid 1px #fff;
 	border-radius: 50%;
+}
+/* main_content内容样式 */
+.con_nav{
+	width: 100%;
+	height: 277px;
+	background: #fff;
+}
+.con_nav .con_nav_ul{
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+.con_nav .con_nav_ul li{
+	width: 25%;
+	height: 180px;
+}
+.con_nav .con_nav_ul li a{
+	display: block;
+	width: 100%;
+	height: 180px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+}
+.con_nav .con_nav_ul li img{
+	width: 190px;
+	height: 130px;
+}
+.con_banner{
+	background: #f4f4f4;
+}
+.con_banner h2{
+	font-size: 30px;
+	text-align: center;
+	height:49px;
+	padding-top: 58px;
+	color: #515151;
+}
+.con_ban_banner a{
+	display: block;
+	height: 450px;
+	background: url(../images/bg09.jpg) no-repeat;
+	background-position-x: 50%;
+}
+.con_phones{
+	width: 100%;
+	background: #f4f4f4;
+}
+.con_phones .con_phones_ul{
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+.con_phones .con_phones_ul li{
+	text-align: center;
+	margin-top: 10px;
+	position: relative;
+}
+.con_phones li:hover{
+	box-shadow: 0px 9px 10px #d6d4d4;
+}
+.con_phones .con_phones_ul li a{
+	display: block;
+	width: 303px;
+	height: 375px;
+	background: #fff;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	font-size: 16px;
+	color:#000;
+}
+.con_phones .con_phones_ul li a span i{
+	font-size: 14px;
+	color: #999;
+}
+.con_phones .con_phones_ul li a span em{
+	font-size: 22px;
+	color: #c00;
+}
+.con_phones .phoneone{
+	width: 615px;
+	height: 610px;
+	background: #fff;
+}
+.con_phones .con_phones_ul .phoneone a{
+	display: block;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	font-size: 26px;
+	color:#000;
+}
+.con_phones .con_phones_ul .phoneone a span i{
+	font-size: 18px;
+	color: #333;
+}
+.con_phones .con_phones_ul .phoneone a span em{
+	font-size: 22px;
+	color: #c00;
+}
+.con_phones .con_phones_ul li a .hot{
+	display: block;
+	width: 60px;
+	line-height: 60px;
+	border-radius: 50%;
+	color: #fff;
+	font-size: 16px;
+	text-align: center;
+	background-image: linear-gradient(120deg,#ff3149,#ff64a6);
+	position: absolute;
+	top:30px;
+	left: 30px;
+}
+.con_phones .con_phones_ul li img{
+	width: 230px;
+	height: 230px;
+	margin-bottom: 8px;
+}
+.con_phones .con_phones_ul .phoneone img{
+	width: 460px;
+	height: 460px;
+}
+.con_ban_banner2 a{
+	display: block;
+	height: 450px;
+	background: url(../images/bg07.jpg) no-repeat;
+	background-position-x: 50%;
+}
+.con_phones_ul .con_ej_left a img{
+	width: 303px;
+	height: 375px;
+}
+.con_phones .con_phones_ul a span em b{
+	font-size:16px;
+	text-decoration: line-through;
+	color: #666;
+}
+.con_ban_banner3 a{
+	display: block;
+	height: 450px;
+	background: url(../images/bg05.jpg) no-repeat;
+	background-position-x: 50%;
+}
+.con_ban_banner4 a{
+	display: block;
+	height: 450px;
+	background: url(../images/bg15.jpg) no-repeat;
+	background-position-x: 50%;
+}
+.con_phones .con_retie_ul{
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+.con_phones .con_retie_ul li{
+	margin-bottom: 10px;
+}
+.con_phones .con_retie_ul .retie a img{
+	width: 303px;
+	height: 190px;
+}
+.con_phones .con_retie_ul .retie a p img{
+	width: 38px;
+	height: 38px;
+	vertical-align: middle;
+	margin-right:20px;
+	margin-left: 10px;
+}
+.con_phones .con_retie_ul li a{
+	display: block;
+	width: 303px;
+	height: 375px;
+	background: #fff;
+	display: flex;
+	flex-direction: column;
+	font-size: 16px;
+	color:#000;
+}
+.con_phones .con_retie_ul .name{
+	line-height: 70px;
+	color: #515151;
+}
+.con_phones .con_retie_ul .speek{
+	line-height: 24px;
+	color: #515151;
+	margin-right:10px;
+	margin-left: 10px;
+}
+.con_phones .con_retie_ul .kind{
+	line-height: 24px;
+	color: #999;
+	margin:25px 10px 0 10px;
+}
+.con_phones .conflyme_ul{
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	padding-bottom: 60px;
+}
+.con_phones .conflyme_ul li{
+	margin-bottom: 10px;
+}
+.con_phones .conflyme_ul .flymebig a img{
+	width: 615px;
+	height: 245px;
+}
+.con_phones .conflyme_ul .flymebig a{
+	display: block;
+	width: 615px;
+	height: 245px;
+	background: #fff;
+}
+.con_phones .conflyme_ul .flyme a img{
+	width: 303px;
+	height: 190px;
+}
+.con_phones .conflyme_ul li a{
+	display: block;
+	width: 303px;
+	height: 245px;
+	background: #fff;
+	position: relative;
+}
+.con_phones .conflyme_ul .caption{
+	line-height: 55px;
+	color: #515151;
+	font-size: 16px;
+	text-align: center;
+}
+.con_phones .conflyme_ul li a>i {
+	display: block;
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background: url(//www3.res.meizu.com/static/cn/global/images/icon-video-player_36c4d32.png) no-repeat;
+    background-size: 100%;
+    right: 15px;
+	bottom: 70px;
+}
+/* 页足样式 */
+.footer{
+	height: 248px;
+	background: #fff;
 }
